--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Nicolino07.github.io/Pagina-Hockey",
+  "homepage": "https://www.hockeybariloche.com.ar",
   "name": "pagina-hockey",
   "version": "0.1.0",
   "private": true,
