Cambio de horarios

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
   "icons": [
     
     {
-      "src": "Logo HB.png",
+      "src": "Favicon.ico",
       "type": "image/png",
       "sizes": "192x192"
     },
